--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "cyan",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.4.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "morgan": "^1.10.0",
-    "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "oracledb": "^5.1.0"
   },
